maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:10: error: value &&! is not a member of Boolean
	if (x==2 &&!estFaceMur) {
                 ^